# lightning-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: Simulation.h
src/: Simulation.cpp  main.cpp
